--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
