--- a/package.json
+++ b/package.json
@@ -21,15 +21,12 @@
     "sequelize-cli": "^6.2.0"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.3.0",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.18.0",
-    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
-    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mysql2": "^2.2.5",
-    "passport": "^0.4.1",
-    "passport-local": "^1.0.0",
     "sequelize": "^6.5.0"
   }
 }
