--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/auth0-react": "^1.3.0",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "axios": "^0.18.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "if-env": "^1.0.4",
     "mysql2": "^2.2.5",
